# bearlib-deprecated

./: .coveragerc  .gitignore  CHANGES  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.rst  circle.yml  requirements-test.txt  setup.cfg  setup.py
.circleci/: config.yml
bearlib/: __init__.py  config.py  events.py  logs.py  tools.py
src/bearlib/: __init__.py  config.py  events.py  logs.py  tools.py
tests/: test_events.py  test_tools.py
tests/test_event_handlers/: article.py
