[metadata]
# replace with your username:
name = bearlib-bear
version = 0.10
author = bear (Mike Taylor)
author_email = bear@bear.im
description = "bear's toolkit"
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/bear/bearlib
license = CC0 1.0 Universal
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[check-manifest]
ignore =
  violations.flake8.txt

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
filename = *.py src/ tests/
exclude = .cache,.tox,.git,.eggs,.venv,__pycache__,build,dist
ignore = E203, E221, E241, E266, E501, W503
max-complexity = 18
select = B,C,E,F,W,T4
#disable = C0103,C0301,C0326,C0115,C0116,E111,R0201,R0913,R0912,R0914

[tool:pytest]
testpaths=tests
